created.  Currently, all users are able to issue CJOIN and create vchans.
Channel takeovers are now useless.  A legitimate op can just CJOIN a new 
vchan and get all of the old users over to the new vchan.  The takeover
people will then be sitting opped by themselves in a vchan while the original
users are back the way they were before in another vchan.  

Channels that have existed for at least 30 minutes are now preserved for 30
minutes if they are empty or split.  If a channel was +i before a split, it
will remain that way for 30 minutes.  All bans will still exist, preventing
abusers from joining through a ban on splits.  A user that does sucessfully
join an empty preserved channel will have ops.  If it was split at the time,
the timestamp protocol will remove the newer side's ops.  These preserved
channels replace the old NO_CHANOPS_ON_SPLIT and NO_JOIN_ON_SPLIT options.

Due to the new flood control for users, the multiple message restriction has
been removed. (/msg nick1,nick2,nick3 message)

Nearly all commands are now modules.  MODLIST will list all loaded modules, 
MODUNLOAD will remove a module from the ircd, and MODLOAD will load a new
module into the ircd.  All of these commands are documented in opers.txt 
and are restricted to admins only.

LazyLinks are now included.  These enable a leaf server to only need 
information about channels that it's local users are on, and nicks that have
been used (in a channel, in a private message, or in a WHO or WHOIS by a user
or channel on the leaf).  Read the LazyLinks.as.implemented.txt document for
more information.

STATS e now shows events.

STATS f now shows active file descriptors.

List of CAPAB's:
TS      - Support the TS protocol
QS      - Remove the QUIT storm on splits
EX      - Support +e exceptions in channels
CHW     - Support PRIVMSG/NOTICE @#channel messages
DE      - Support channel mode +d - block based on the realname field
LL      - LazyLink server