@@ -1,5 +1,5 @@
 # Hybrid 7 Example configuration file
-# $Id: example.conf,v 7.35 2000/12/31 19:08:05 wcampbel Exp $
+# $Id: example.conf,v 7.36 2001/01/01 23:27:22 davidt Exp $
 # December 2000 - ejb, wcampbel, db
 
 # All comments start with the # sign.
@@ -409,6 +409,10 @@ general {
 	
 	max_targets = 4;
 
+	# message_locale
+	# default message locale to use if gettext() is enabled
+	message_locale = "custom";
+
 	# umodes that only opers can set.
 	# the default should be fine, but you can add wallops and
 	# servnotice if you want only opers to set +s / +w.
@@ -437,6 +441,10 @@ general {
 
 	oper_only_umodes = bots, cconn, debug, full, skill, nchange, 
                            rej, spy, external, operwall;
+
+	# vchans_oper_only
+        # allow non-opers to use CJOIN?
+	vchans_oper_only = NO;
 };
 
 modules {
