@@ -18,7 +18,7 @@
  *   along with this program; if not, write to the Free Software
  *   Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.
  *
- * $Id: ircd_parser.y,v 1.87 2000/12/31 16:40:47 lusky Exp $
+ * $Id: ircd_parser.y,v 1.88 2001/01/01 23:27:29 davidt Exp $
  */
 
 %{
@@ -198,6 +198,7 @@ int   class_redirport_var;
 %token  MAX_TARGETS
 %token  LINKS_NOTICE
 %token  LINKS_DELAY
+%token  VCHANS_OPER_ONLY
 
 %type   <ip_value> IP_TYPE
 %type   <string>   QSTRING
@@ -1276,8 +1277,8 @@ general_item:       general_failed_oper_notice | general_show_failed_oper_id |
                     general_fname_foperlog | general_oper_only_umodes |
                     general_max_targets | general_links_notice |
                     general_links_delay |
+                    general_vchans_oper_only |
                     error
-
 
 general_failed_oper_notice:   FAILED_OPER_NOTICE '=' TYES ';'
   {
@@ -1623,4 +1624,14 @@ general_links_notice: LINKS_NOTICE '=' TYES ';'
     LINKS_NOTICE '=' TNO ';'
   {
     ConfigFileEntry.links_notice = 0;
+  };
+
+general_vchans_oper_only: VCHANS_OPER_ONLY '=' TYES ';'
+  {
+    ConfigFileEntry.vchans_oper_only = 1;
+  }
+    |
+    VCHANS_OPER_ONLY '=' TNO ';'
+  {
+    ConfigFileEntry.vchans_oper_only = 0;
   };
